kubernetes/apps/auth/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - authentik.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
